[gd_scene load_steps=4 format=3 uid="uid://cajahfo5qk81g"]

[ext_resource type="Script" path="res://Scenes/file_select.gd" id="1_u4ltf"]
[ext_resource type="Theme" uid="uid://ews1me176sme" path="res://Scenes/main_menu_theme.tres" id="8_b7aig"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_diaxe"]
bg_color = Color(0.101961, 0.121569, 0.180392, 0.588235)

[node name="FileSelect" type="CanvasLayer"]
script = ExtResource("1_u4ltf")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = -1
anchor_right = 0.251423
anchor_bottom = 1.0
offset_bottom = -0.000183105
grow_vertical = 2
theme = ExtResource("8_b7aig")
theme_override_styles/panel = SubResource("StyleBoxFlat_diaxe")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 64

[node name="FileContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="Title" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/FileContainer"]
layout_mode = 2
text = "Select Save File"
horizontal_alignment = 1

[node name="File1" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/FileContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_right = NodePath("../../VBoxContainer/Delete1")
focus_neighbor_bottom = NodePath("../File2")
theme_override_font_sizes/font_size = 42
text = "File 1

"

[node name="Time" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/FileContainer/File1"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 10.0
offset_top = -6.5
offset_right = 155.0
offset_bottom = 25.5
grow_vertical = 2
scale = Vector2(1, 1.00463)
theme_override_font_sizes/font_size = 18
text = "Time: 0:00:00"

[node name="Flames" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/FileContainer/File1"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 10.0
offset_top = 15.5
offset_right = 127.0
offset_bottom = 47.5
grow_vertical = 2
scale = Vector2(1, 1.00439)
theme_override_font_sizes/font_size = 18
text = "Flames: 0"

[node name="File2" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/FileContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_top = NodePath("../File1")
focus_neighbor_right = NodePath("../../VBoxContainer/Delete2")
focus_neighbor_bottom = NodePath("../File3")
theme_override_font_sizes/font_size = 42
text = "File 2

"

[node name="Time" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/FileContainer/File2"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 10.0
offset_top = -7.0
offset_right = 155.0
offset_bottom = 25.0
grow_vertical = 2
scale = Vector2(1, 1.00463)
theme_override_font_sizes/font_size = 18
text = "Time: 0:00:00"

[node name="Flames" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/FileContainer/File2"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 10.0
offset_top = 15.5
offset_right = 127.0
offset_bottom = 47.5
grow_vertical = 2
scale = Vector2(1, 0.986076)
theme_override_font_sizes/font_size = 18
text = "Flames: 0"

[node name="File3" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/FileContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_top = NodePath("../File2")
focus_neighbor_right = NodePath("../../VBoxContainer/Delete3")
theme_override_font_sizes/font_size = 42
text = "File 3

"

[node name="Time" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/FileContainer/File3"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 10.0
offset_top = -7.0
offset_right = 155.0
offset_bottom = 25.0
grow_vertical = 2
scale = Vector2(1, 1.00463)
theme_override_font_sizes/font_size = 18
text = "Time: 0:00:00"

[node name="Flames" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/FileContainer/File3"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 10.0
offset_top = 15.5
offset_right = 127.0
offset_bottom = 47.5
grow_vertical = 2
scale = Vector2(1, 1.00439)
theme_override_font_sizes/font_size = 18
text = "Flames: 0"

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Delete1" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_left = NodePath("../../FileContainer/File1")
focus_neighbor_bottom = NodePath("../Delete2")
theme_override_font_sizes/font_size = 24
text = "Delete
File

"

[node name="Delete2" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_left = NodePath("../../FileContainer/File2")
focus_neighbor_top = NodePath("../Delete1")
focus_neighbor_bottom = NodePath("../Delete3")
theme_override_font_sizes/font_size = 24
text = "Delete
File

"

[node name="Delete3" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_left = NodePath("../../FileContainer/File3")
focus_neighbor_top = NodePath("../Delete2")
theme_override_font_sizes/font_size = 24
text = "Delete
File

"

[connection signal="mouse_entered" from="PanelContainer/MarginContainer/HBoxContainer/FileContainer/File1" to="." method="_on_hovered_button" binds= ["File1"]]
[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/FileContainer/File1" to="." method="_on_file_pressed" binds= [1]]
[connection signal="mouse_entered" from="PanelContainer/MarginContainer/HBoxContainer/FileContainer/File2" to="." method="_on_hovered_button" binds= ["File2"]]
[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/FileContainer/File2" to="." method="_on_file_pressed" binds= [2]]
[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/FileContainer/File3" to="." method="_on_file_pressed" binds= [3]]
[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/Delete1" to="." method="_on_file_delete" binds= [1]]
[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/Delete2" to="." method="_on_file_delete" binds= [2]]
[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/Delete3" to="." method="_on_file_delete" binds= [3]]
